dependency utils-core, fixes